@@ -38,84 +38,84 @@ static bool is_valid_expression(units *v, int scaling_unit,
 				bool is_mandatory = false);
 static bool is_valid_expression_start();
 
-int get_vunits(vunits *res, unsigned char si)
+bool get_vunits(vunits *res, unsigned char si)
 {
   if (!is_valid_expression_start())
-    return 0;
+    return false;
   units x;
   if (is_valid_expression(&x, si, false /* is_parenthesized */)) {
     *res = vunits(x);
-    return 1;
+    return true;
   }
   else
-    return 0;
+    return false;
 }
 
-int get_hunits(hunits *res, unsigned char si)
+bool get_hunits(hunits *res, unsigned char si)
 {
   if (!is_valid_expression_start())
-    return 0;
+    return false;
   units x;
   if (is_valid_expression(&x, si, false /* is_parenthesized */)) {
     *res = hunits(x);
-    return 1;
+    return true;
   }
   else
-    return 0;
+    return false;
 }
 
 // for \B
 
-int get_number_rigidly(units *res, unsigned char si)
+bool get_number_rigidly(units *res, unsigned char si)
 {
   if (!is_valid_expression_start())
-    return 0;
+    return false;
   units x;
   if (is_valid_expression(&x, si, false /* is_parenthesized */,
 			  true /* is_mandatory */)) {
     *res = x;
-    return 1;
+    return true;
   }
   else
-    return 0;
+    return false;
 }
 
-int get_number(units *res, unsigned char si)
+bool get_number(units *res, unsigned char si)
 {
   if (!is_valid_expression_start())
-    return 0;
+    return false;
   units x;
   if (is_valid_expression(&x, si, false /* is_parenthesized */)) {
     *res = x;
-    return 1;
+    return true;
   }
   else
-    return 0;
+    return false;
 }
 
-int get_integer(int *res)
+bool get_integer(int *res)
 {
   if (!is_valid_expression_start())
-    return 0;
+    return false;
   units x;
   if (is_valid_expression(&x, 0, false /* is_parenthesized */)) {
     *res = x;
-    return 1;
+    return true;
   }
   else
-    return 0;
+    return false;
 }
 
 enum incr_number_result { BAD, ABSOLUTE, INCREMENT, DECREMENT };
 
 static incr_number_result get_incr_number(units *res, unsigned char);
 
-int get_vunits(vunits *res, unsigned char si, vunits prev_value)
+bool get_vunits(vunits *res, unsigned char si, vunits prev_value)
 {
   units v;
   switch (get_incr_number(&v, si)) {
   case BAD:
-    return 0;
+    return false;
   case ABSOLUTE:
     *res = v;
     break;
@@ -128,15 +128,15 @@ int get_vunits(vunits *res, unsigned char si, vunits prev_value)
   default:
     assert(0 == "unhandled switch case returned by get_incr_number()");
   }
-  return 1;
+  return true;
 }
 
-int get_hunits(hunits *res, unsigned char si, hunits prev_value)
+bool get_hunits(hunits *res, unsigned char si, hunits prev_value)
 {
   units v;
   switch (get_incr_number(&v, si)) {
   case BAD:
-    return 0;
+    return false;
   case ABSOLUTE:
     *res = v;
     break;
@@ -149,15 +149,15 @@ int get_hunits(hunits *res, unsigned char si, hunits prev_value)
   default:
     assert(0 == "unhandled switch case returned by get_incr_number()");
   }
-  return 1;
+  return true;
 }
 
-int get_number(units *res, unsigned char si, units prev_value)
+bool get_number(units *res, unsigned char si, units prev_value)
 {
   units v;
   switch (get_incr_number(&v, si)) {
   case BAD:
-    return 0;
+    return false;
   case ABSOLUTE:
     *res = v;
     break;
@@ -170,15 +170,15 @@ int get_number(units *res, unsigned char si, units prev_value)
   default:
     assert(0 == "unhandled switch case returned by get_incr_number()");
   }
-  return 1;
+  return true;
 }
 
-int get_integer(int *res, int prev_value)
+bool get_integer(int *res, int prev_value)
 {
   units v;
   switch (get_incr_number(&v, 0)) {
   case BAD:
-    return 0;
+    return false;
   case ABSOLUTE:
     *res = v;
     break;
@@ -191,7 +191,7 @@ int get_integer(int *res, int prev_value)
   default:
     assert(0 == "unhandled switch case returned by get_incr_number()");
   }
-  return 1;
+  return true;
 }
 
 
